<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151515"
    android:gravity="bottom|center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_view_input"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/zero"
        android:paddingLeft="10dp"
        android:textColor="#FDFDFD"
        android:textColorHint="#DCD9D9"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_clean"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            app:srcCompat="@mipmap/ic_launcher_clean_foreground" />

        <ImageView
            android:id="@+id/button_remove_last1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="300dp"
            android:clickable="true"
            app:srcCompat="@mipmap/ic_launcher_delete_foreground" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:text="Result :"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="385dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_input"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_seven"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/seven"
            android:textColor="#FAFAFA"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_eight"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/eight"
            android:textColor="#FDFDFD"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_nine"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/nine"
            android:textColor="#F6F5F5"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_calc"
            android:text="@string/divid"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_four"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/four"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_five"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/five"
            android:textColor="#F8F5F5"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/six"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_calc"
            android:text="@string/multi"
            android:textColor="#F6F6F5"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_one"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/one"
            android:textColor="#FFFEFE"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_two"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/two"
            android:textColor="#F8F8F8"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_three"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/three"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_subtraction"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_calc"
            android:text="@string/sub"

            android:textColor="#FAF9F8"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dot"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/dot"
            android:textColor="#F4F4F4"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_zero"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_buttons"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/back_equal"
            android:text="@string/rqul"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_summation"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/background_calc"
            android:text="@string/sum"
            android:textColor="#FBFBF9"
            android:textSize="28sp" />
    </LinearLayout>
</LinearLayout>